Validation updates for ams and hlr

--- a/BeepSendSDK/BeepSendSDKDocumentation/BSHLR_h/Classes/BSHLR/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSHLR_h/Classes/BSHLR/toc.html
@@ -47,7 +47,9 @@
 <span class="hd_tocAccess">Instance Methods</span>
 <ul class="tocSubEntryList">
 <!-- instance method --><li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSHLR/initHLRWithID:timestamp:dlrReport:mccmnc:imsi:prefix:potred:inRoaming:withErrors:" target="_top">initHLRWithID:&zwj;timestamp:&zwj;dlrReport:&zwj;mccmnc:&zwj;imsi:&zwj;prefix:&zwj;potred:&zwj;inRoaming:&zwj;withErrors:&zwj;</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSHLR/initHLRWithNumber:" target="_top">initHLRWithNumber:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSHLR/initHLRWithNumber:andErrors:" target="_top">initHLRWithNumber:andErrors:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:" target="_top">validateHLRForNumberOnCompletion:&zwj;</a></li>
 </ul>
 </div>
 </div>
