--- a/BeepSendSDK/BeepSendSDKDocumentation/BSMessage_h/Classes/BSMessage/toc.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSMessage_h/Classes/BSMessage/toc.html
@@ -67,6 +67,7 @@
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSMessage/scheduleSendingAtTime:" target="_top">scheduleSendingAtTime:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSMessage/setEncoding:" target="_top">setEncoding:</a></li>
 <li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSMessage/setValidityPeriod:" target="_top">setValidityPeriod:</a></li>
+<li class="tocSubEntry"><a href="index.html#//apple_ref/occ/instm/BSMessage/validateMessageOnCompletion:" target="_top">validateMessageOnCompletion:</a></li>
 </ul>
 </div>
 </div>
