--- a/BeepSendSDK/BeepSendSDKDocumentation/BSHLR_h/Classes/BSHLR/index.html
+++ b/BeepSendSDK/BeepSendSDKDocumentation/BSHLR_h/Classes/BSHLR/index.html
@@ -279,7 +279,11 @@ function disclosure_triangle(elt) {
 <dl>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSHLR/initHLRWithID:timestamp:dlrReport:mccmnc:imsi:prefix:potred:inRoaming:withErrors:" target="_top">-initHLRWithID:timestamp:dlrReport:mccmnc:imsi:prefix:potred:inRoaming:withErrors:</a></tt></dt>
 <dd></dd>
+<dt><tt><a href="index.html#//apple_ref/occ/instm/BSHLR/initHLRWithNumber:" target="_top">-initHLRWithNumber:</a></tt></dt>
+<dd></dd>
 <dt><tt><a href="index.html#//apple_ref/occ/instm/BSHLR/initHLRWithNumber:andErrors:" target="_top">-initHLRWithNumber:andErrors:</a></tt></dt>
+<dd></dd>
+<dt><tt><a href="index.html#//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:" target="_top">-validateHLRForNumberOnCompletion:</a></tt></dt>
 <dd></dd>
 </dl>
 <hr class="betweenAPIEntries">
@@ -361,6 +365,34 @@ function disclosure_triangle(elt) {
 </p>
 <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSHLR/initHLRWithID:timestamp:dlrReport:mccmnc:imsi:prefix:potred:inRoaming:withErrors:;name=end --><!-- end discussion -->
 <hr class="betweenAPIEntries">
+<!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSHLR/initHLRWithNumber:;   name=BSHLR::initHLRWithNumber: --><a name="//apple_ref/occ/instm/BSHLR/initHLRWithNumber:"></a>
+<h3><a name="initHLRWithNumber:">initHLRWithNumber:</a></h3>
+<hr class="afterName">
+<div class="declaration_indent">
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSHLR/initHLRWithNumber:;name=start -->- (<a machinegenerated="true" href="index.html#//apple_ref/occ/cl/BSHLR" logicalPath="//apple_ref/occ/cl/BSHLR" target="_top"><span class="type">BSHLR</span></a> <span class="type">*</span>)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/BSHLR/initHLRWithNumber:andErrors:" logicalPath="//apple_ref/occ/instm/BSHLR/initHLRWithNumber" target="_top"><span class="function">initHLRWithNumber</span></a>:(<!-- a logicalPath="//apple_ref/occ/cl/NSString //apple_ref/occ/tdef/NSString //apple_ref/occ/tag/NSString //apple_ref/occ/struct/NSString //apple_ref/occ/intf/NSString //apple_ref/doc/anysymbol/NSString" machineGenerated="true" --><span class="type">NSString</span><!-- /a --> <span class="type">*</span>)<!-- a logicalPath="//apple_ref/occ/econst/phoneNumber //apple_ref/occ/data/BSHLR/phoneNumber //apple_ref/occ/data/phoneNumber //apple_ref/occ/clconst/BSHLR/phoneNumber " machineGenerated="true" --><span class="var">phoneNumber</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSHLR/initHLRWithNumber:;name=end --></pre>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSHLR/initHLRWithNumber:/phoneNumber;   name=initHLRWithNumber:::phoneNumber -->
+<a name="//apple_ref/doc/methodparam/BSHLR/initHLRWithNumber:/phoneNumber"></a>
+<code>phoneNumber</code>
+</dt>
+<dd><p>- Phone number</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Return Value</font></h5>
+<p><!-- begin return value --></p>
+<p>Returns HLR object
+
+<!-- end return value --></p>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSHLR/initHLRWithNumber:;name=start --><p>Create HLR object
+Used when HLR request return errors or when performing HLR validation
+</p>
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSHLR/initHLRWithNumber:;name=end --><!-- end discussion -->
+<hr class="betweenAPIEntries">
 <!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSHLR/initHLRWithNumber:andErrors:;   name=BSHLR::initHLRWithNumber:andErrors: --><a name="//apple_ref/occ/instm/BSHLR/initHLRWithNumber:andErrors:"></a>
 <h3><a name="initHLRWithNumber:andErrors:">initHLRWithNumber:andErrors:</a></h3>
 <hr class="afterName">
@@ -395,6 +427,35 @@ function disclosure_triangle(elt) {
 Used when HLR request return errors or when performing HLR validation
 </p>
 <!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSHLR/initHLRWithNumber:andErrors:;name=end --><!-- end discussion -->
+<hr class="betweenAPIEntries">
+<!-- headerDoc=instm;  uid=//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:;   name=BSHLR::validateHLRForNumberOnCompletion: --><a name="//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:"></a>
+<h3><a name="validateHLRForNumberOnCompletion:">validateHLRForNumberOnCompletion:</a></h3>
+<hr class="afterName">
+<div class="declaration_indent">
+<pre><!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:;name=start -->- (<!-- a logicalPath="//apple_ref/occ/cl/void //apple_ref/occ/tdef/void //apple_ref/occ/tag/void //apple_ref/occ/struct/void //apple_ref/occ/intf/void //apple_ref/doc/anysymbol/void" machineGenerated="true" --><span class="type">void</span><!-- /a -->)<a machinegenerated="true" href="index.html#//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:" logicalPath="//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion" target="_top"><span class="function">validateHLRForNumberOnCompletion</span></a>:(void(^)(<a machinegenerated="true" href="index.html#//apple_ref/occ/cl/BSHLR" logicalPath="//apple_ref/occ/cl/BSHLR" target="_top"><span class="type">BSHLR</span></a> <span class="type">*</span><span class="param">hlr</span>, <!-- a logicalPath="//apple_ref/occ/cl/NSArray //apple_ref/occ/tdef/NSArray //apple_ref/occ/tag/NSArray //apple_ref/occ/struct/NSArray //apple_ref/occ/intf/NSArray //apple_ref/doc/anysymbol/NSArray" machineGenerated="true" --><span class="type">NSArray</span><!-- /a --> <span class="type">*</span><a machinegenerated="true" href="index.html#//apple_ref/occ/instp/BSHLR/errors" logicalPath="//apple_ref/occ/cl/errors //apple_ref/occ/tdef/errors //apple_ref/occ/tag/errors //apple_ref/occ/struct/errors //apple_ref/occ/intf/errors //apple_ref/doc/anysymbol/errors" target="_top"><span class="type">errors</span></a>))<!-- a logicalPath="//apple_ref/occ/econst/block //apple_ref/occ/data/BSHLR/block //apple_ref/occ/data/block //apple_ref/occ/clconst/BSHLR/block " machineGenerated="true" --><span class="var">block</span><!-- /a -->; <!-- headerDoc=declaration;uid=//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:;name=end --></pre>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Parameters</font></h5>
+<div class="param_indent">
+<dl>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSHLR/validateHLRForNumberOnCompletion:/phoneNumber;   name=validateHLRForNumberOnCompletion:::phoneNumber -->
+<a name="//apple_ref/doc/methodparam/BSHLR/validateHLRForNumberOnCompletion:/phoneNumber"></a>
+<code>phoneNumber</code>
+</dt>
+<dd><p>- Phone number to perform HLR</p></dd>
+<dt>
+<!-- headerDoc=methodparam;  uid=//apple_ref/doc/methodparam/BSHLR/validateHLRForNumberOnCompletion:/block;   name=validateHLRForNumberOnCompletion:::block -->
+<a name="//apple_ref/doc/methodparam/BSHLR/validateHLRForNumberOnCompletion:/block"></a>
+<code>block</code>
+</dt>
+<dd><p>- Returns HLR response or error</p></dd>
+</dl>
+</div>
+<h5 class="tight"><font face="Lucida Grande,Helvetica,Arial">Discussion</font></h5>
+<!-- begin discussion --><!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:;name=start --><p>Method that performs a dry run of HLR lookup
+(takes some time)
+</p>
+<!-- headerDoc=discussion;uid=//apple_ref/occ/instm/BSHLR/validateHLRForNumberOnCompletion:;name=end --><!-- end discussion -->
 <hr class="betweenSections">
 <a name="HeaderDoc_props"></a>
 <h2 class="h2tight">Properties</h2>
@@ -553,7 +614,7 @@ Used when HLR request return errors or when performing HLR validation
 <p class="gapBeforeFooter">&nbsp;</p>
 <hr class="afterFooter">
 <div class="hd_copyright_and_timestamp">
-<p class="hd_timestamp">Last Updated: Thursday, September 04, 2014
+<p class="hd_timestamp">Last Updated: Friday, September 26, 2014
 </p>
 </div>
 </td>
